# npccv2

./: .gitignore  DEPLOY_FLY_VERCEL.md  DEPLOY_README.md  DEV.md  DEV_CERTS.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  vercel.json
.github/workflows/: backend-ci.yml  debug-frontend-build.yml  deploy-backend-fly.yml  deploy-frontend-vercel.yml  deploy-frontend.yml  deploy.yml  frontend-ci.yml
api/: [...path].js
backend/: .env  Dockerfile  __init__.py  app.py  config.py  deploy_fly.sh  extensions.py  fly.toml  fly.toml.bak  models.py  pyproject.toml  requirements.txt  seeds.py
backend/instance/: dev.db
backend/models/: __init__.py  account.py  membership.py  refresh_token.py  user.py
backend/routes/: accounts.py  auth.py  me.py  role_helper.py  tenant.py
backend/tests/: test_api.py
dev_certs/: dev.crt  dev.key
frontend/: Dockerfile  README.md  cookies.txt  dev-serve.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.jsx  index.css  version.js
frontend/src/components/: LayoutShell.jsx  RoleGuard.jsx  ToastContainer.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AccountPickerPage.jsx  CreateAccountPage.jsx  DashboardDM.jsx  DashboardPage.jsx  DashboardPlayer.jsx  LandingPage.jsx  (+2 more)
migrations/versions/: 5f860f8285ca_initial_schema.py  a1b2c3d4e5f6_add_join_code_and_status.py
scripts/: bootstrap-hetzner.sh  create_fly_app.sh  create_fly_db.sh  create_fly_deploy_token.sh  generate-dev-certs.sh  run_migrations.sh  set_fly_secrets.sh
(+3 files in other folders)
